# videohosting

./: pyproject.toml
project/api/: urls.py
project/channels/: models.py
project/channels/migrations/: 0001_initial.py
project/comments/: models.py
project/comments/migrations/: 0001_initial.py
project/core/: asgi.py  wsgi.py
project/core/settings/: base.py
project/playlists/: models.py
project/playlists/migrations/: 0001_initial.py
project/subscriptions/: models.py
project/subscriptions/migrations/: 0001_initial.py
project/users/: models.py  serializers.py  urls.py  views.py
project/users/migrations/: 0001_initial.py  0002_user_password2_user_subscriptions.py  0003_user_avatar.py
project/video/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
project/video/migrations/: 0001_initial.py  0002_tag_remove_video_comments_video_duration_and_more.py  0003_rename_dislikes_video_dislikes_count_and_more.py
